# KittyNails

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 304250ea92fd_use_timezone_aware_timestamps.py  6b265ca6e5b9_create_availability_rules_table.py  6c6cf084bf3d_create_blocked_times_table.py  89f6a4c70376_create_blocked_times_table.py  df7d1ac1f4cc_make_appointment_timestamps_timezone_.py  f2ac01aa1092_create_services_and_appointments_tables.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.test.tsx  App.tsx  index.css
frontend/src/api/: client.test.ts  client.ts
frontend/src/auth/: AuthProvider.test.tsx  AuthProvider.tsx  RequireAuth.tsx
src/: config.py  database.py  dependencies.py  main.py
src/db/: database.py  models.py
src/kitty_nails.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/models/: __init__.py  appointment.py  availability.py  availability_rules.py  blocked_time.py  service.py
src/routers/: appointments.py  availability.py  services.py  slots.py
src/schemas/: appointment.py  availability_rule.py  blocked_time.py  service.py
src/services/: appointment_service.py  availability_rules.py  availability_service.py  blocked_time_service.py  service_crud.py  services.py  slots_service.py
tests/: conftest.py  test_appointment_properties.py  test_appointments.py  test_availability.py  test_availability_rules.py  test_blocked_times.py  test_pydantic_properties.py  test_services.py
(+23 files in other folders)
