[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kitty-nails"
version = "0.1.0"
description = "A nail appointment app"
dependencies = [
    "fastapi>=0.136.1",
    "sqlalchemy[asyncio]>=2.0.49",
    "pydantic>=2.13.4",
    "uvicorn>=0.47.0",
    "alembic>=1.18.4",
    "aiosmtplib>=4.1.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "asyncpg>=0.31.0",
    "pydantic-settings>=2.14.1",
    "pydantic[email]>=2.13.0"
]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.1",
    "ruff>=0.11.0",
    "hypothesis>=6.100.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
